# proiect-grafica-3d

./: CMakeLists.txt  main.cpp
